--- a/vistocar_inspect/src/pages/home/home.html
+++ b/vistocar_inspect/src/pages/home/home.html
@@ -44,7 +44,7 @@
           CONSULTAR
         </ion-card-header>
         <ion-card-content>
-          Consultar vistoria / transmissão
+          Vistorias / Transmissões
           <ion-icon name="search"></ion-icon>
         </ion-card-content>
       </ion-card>
