--- a/vistocar_inspect/src/pages/consult-inspect/consult-inspect.html
+++ b/vistocar_inspect/src/pages/consult-inspect/consult-inspect.html
@@ -15,7 +15,7 @@
         <ion-item>
           <h2 padding-top>Placa: XJS-0701</h2>
           <p>Tipo de vistoria: A</p>
-          <button ion-button clear item-end (click)="details();">Visualizar</button>
+          <button ion-button clear item-end (click)="details();" class="button-font-text">Visualizar</button>
         </ion-item>
 
         <ion-item>
