--- a/vistocar_inspect/src/pages/home/home.html
+++ b/vistocar_inspect/src/pages/home/home.html
@@ -27,11 +27,10 @@
     <ion-col>
       <ion-card>
         <ion-card-header>
-          VISTORIAS
+          <label>VISTORIAS</label>
         </ion-card-header>
         <ion-card-content>
-          Efetuar nova vistoria
-          <ion-icon name="add"></ion-icon>
+          <label class="color-primary">Efetuar nova vistoria</label>
         </ion-card-content>
       </ion-card>
     </ion-col>
@@ -41,11 +40,10 @@
     <ion-col>
       <ion-card padding-top (click)="consultInspect();">
         <ion-card-header>
-          CONSULTAR
+          <label>CONSULTAR</label>
         </ion-card-header>
         <ion-card-content>
-          Vistorias / Transmissões
-          <ion-icon name="search"></ion-icon>
+          <label class="color-primary">Vistorias / Transmissões</label>
         </ion-card-content>
       </ion-card>
     </ion-col>
@@ -55,10 +53,10 @@
     <ion-col>
       <ion-card padding-top (click)="consultSchedules();">
         <ion-card-header>
-          AGENDAMENTOS
+          <label>AGENDAMENTOS</label>
         </ion-card-header>
         <ion-card-content>
-          Visualizar
+          <label class="color-primary">Visualizar</label>
           <ion-icon name="search"></ion-icon>
         </ion-card-content>
       </ion-card>
